# Group-Renaming

./: .gitignore  README.md  package-lock.json  package.json  updater.json
src/: config.js  dragging.js  files.js  groups.js  index.html  init.js  renaming.js  style.css  tauri.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  folder_interaction.rs  get.rs  lib.rs  main.rs  rename.rs
