[package]
name = "group-renaming"
version = "0.1.0"
description = "Group Renaming"
authors = ["CMD-Golem"]
license = "AGPL-3.0"
repository = "https://github.com/CMD-Golem/Group-Renaming"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "group_renaming_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde_json = "1.0.140"
serde = "1.0.219"
infer = "0.19.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
